--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ ipywidgets
 scikit-learn
 pandas
 colorcet
-git+https://github.com/simpeg/simpeg.git@SP_spherical
+git+https://github.com/simpeg/simpeg.git@miller_tongariro_2018
